sm/solutions/resilience-retry/preference-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: preference-vs
  namespace: resilience-retry
spec:
  hosts:
  - preference
  http:
  - retries:
      attempts: 100
      perTryTimeout: 2s
      retryOn: 5xx
    route:
    - destination:
        host: preference
        port:
          number: 8080
